# Voxel-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/core/: block.hpp  camera.hpp  chunk.hpp  engine.hpp  renderer.hpp  window.hpp
include/rendering/: perlin_noise.hpp  renderer.hpp  shader.hpp
include/utils/: constantes.hpp
shaders/: block.frag  block.vert
src/: main.cpp
src/core/: block.cpp  camera.cpp  chunk.cpp  engine.cpp  renderer.cpp  window.cpp
src/rendering/: perlin_noise.cpp  renderer.cpp  shader.cpp
src/utils/: stb_image.cpp
